@@ -5367,8 +5367,17 @@
           ( @(548:@(?:?) @)&Out$863
           | 
           )
-          (@(får:? (å|æ) ?)
-          |Out$864
+          ( @(får:? (å|æ) ?)
+          | Out$864
+          )
+          ( get$("12.34",MEM,JSN)&Out$865
+          | 
+          )
+          ( get$("[12.34]",MEM,JSN):(,1234/100)
+          | Out$866
+          )
+          ( get$("<p<q",MEM,ML):(p.) (q.)
+          | Out$867
           )
       &   out
         $ ( str
